--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
     <div class="card" style="width: 18rem">
       <img src="./iphone14.jfif" class="card-img-top" alt="..." />
       <div class="card-body">
-        <h5 class="card-title">Iphone 13</h5>
+        <h5 class="card-title">Iphone 16 pro</h5>
         <p class="card-text">
           Some quick example text to build on the card title and make up the
           bulk of the card’s content.
         </p>
         <a href="#" class="btn btn-primary">Price-70,000</a>
+      
       </div>
     </div>
 
